[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/global/explosions/_base/_BaseExplosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/global/explosions/nuclear/NuclearExplosion.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.508929, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
lifetime_randomness = 0.99
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 800.0
initial_velocity_random = 0.8
angular_velocity = 1000.0
angular_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 800.0
damping_random = 0.8
scale = 10.0
scale_random = 0.9
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Explosion" instance=ExtResource( 1 )]
script = ExtResource( 2 )
explosion_radius = 1100.0
damage = 500.0
knockback = 2000.0

[node name="Particles2D" parent="." index="1"]
process_material = SubResource( 3 )

[node name="CollisionShape2D" parent="AreaOfEffect" index="0"]
shape = SubResource( 4 )

[node name="LightFlash" type="CanvasLayer" parent="." index="6"]

[node name="ColorRect" type="ColorRect" parent="LightFlash" index="0"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LightFlash/ColorRect" index="0"]
anims/flash = SubResource( 5 )
[connection signal="animation_finished" from="LightFlash/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
